--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
         <title>Blog pessoal</title>
         <meta charset="UTF-8">
         <meta name="author" content="Lara Cruz">
+        <style>
+            .cor-primaria{
+                background-color: blueviolet;
+                color: aqua;
+            }
+            body{
+                background-color: black;
+                color: antiquewhite;
+            }
+            .cor-frufru{
+                color: brown;
+            }
+        </style>
     </head>
     <body>
-        <header class="cor-primaria">
+        <header class="cor-primaria" id="home">
             <h1>Este é meu Blog Pessoal</h1>
             <nav>
                 <ul>
@@ -14,6 +27,7 @@
                     <li><a href="#adicionais">Informações</a></li>
                 </ul>
             </nav>
+        </header>
             <section id="sobremim">
                 <h2>Sobre mim</h2>
                 <p>Olá, me chamo Lara Thayssa Cruz de Souza, tenho 19 anos 
@@ -32,10 +46,28 @@
             <section id="adicionais">
                 <h2>Informações</h2>
                 <p>Gosto de ...</p>
+                <dl>
+                    <dt>Guitarra</dt>
+                    <dd>Amo solos de <span class="cor-frufru">Guitarra</span></dd>
+                    <dt>Gatos</dt>
+                    <dd>Meu pet favorito☆</dd>
+                    <dt>Games</dt>
+                    <dd>Me divirto bastante!</dd>
+                </dl>
             </section>
-        </header>
+            <section>
+                <h3>Anexos</h3>
+                <p>Visite o site de anexos:<a href="anexos.html">Clique Aqui!</a></p>
+            </section>
+            <div>Volte ao topo <a href="#home">aqui</a></div>
         <footer class="cor-primaria">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius quia libero voluptas commodi similique. Recusandae eum ex aperiam sit eaque! Non magnam provident aperiam maxime unde quod necessitatibus, dolor dolore!
+            <div>
+                <h4>Contate-me</h4>
+                <h6> Tel:(99)99999-9999</h6>
+                <h6> Email: email1egal@email.com</h6>
+            </div>
+            <div>farofa</div>
+            <div></div>
         </footer>
     </body>
 </html>
