--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             }
         </style>
     </head>
-    <body>
+    <body link="indigo" alink="indigo" vlink="indigo">
         <header class="cor-primaria" id="home">
             <h1>Este é meu Blog Pessoal</h1>
             <nav>
@@ -31,7 +31,7 @@
             <section id="sobremim">
                 <h2>Sobre mim</h2>
                 <p>Olá, me chamo Lara Thayssa Cruz de Souza, tenho 19 anos 
-                e estou aprendendo Programação web.</p>
+                e estou aprendendo Programação Web.</p>
             </section>
             <section id="curriculo">
                 <h2>Currículo</h2>
@@ -66,7 +66,7 @@
                 <h6> Tel:(99)99999-9999</h6>
                 <h6> Email: email1egal@email.com</h6>
             </div>
-            <div>farofa</div>
+            <div></div>
             <div></div>
         </footer>
     </body>
